--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 /* :root {
   --background: #ffffff;
@@ -26,46 +27,47 @@ body {
 } */
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+	--background: #ffffff;
+	--foreground: #171717;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+	--color-background: var(--background);
+	--color-foreground: var(--foreground);
+	--font-sans: var(--font-geist-sans);
+	--font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+	:root {
+		--background: #0a0a0a;
+		--foreground: #ededed;
+	}
 }
 
 html {
-  height: 100%;
-  /* safari mobile viewport bug fix */
-  height: -webkit-fill-available;
-  scroll-behavior: smooth;
+	height: 100%;
+	/* safari mobile viewport bug fix */
+	height: -webkit-fill-available;
+	scroll-behavior: smooth;
 
-  &.bs-no-scroll {
-    overflow: hidden!important;
-  }
+	&.bs-no-scroll {
+		overflow: hidden !important;
+	}
 }
 
 body {
-  min-height: 100vh;
-  /* safari mobile viewport bug fix */
-  min-height: -webkit-fill-available;
-  margin: 0;
-  padding: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-variant-ligatures: no-contextual;
+	min-height: 100vh;
+	/* safari mobile viewport bug fix */
+	min-height: -webkit-fill-available;
+	margin: 0;
+	padding: 0;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	font-variant-ligatures: no-contextual;
+	font-family: "Poppins", sans-serif !important;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
